syntax = "proto3";
package cache;

// Service
service detectCourtLine {
  rpc extractCourtLines(extractCourtLinesRequest) returns (extractCourtLinesResponse) {}
}

// Request Name
message extractCourtLinesRequest {
  bytes frame=1;
}

// Response Array

// message arr{
//   repeated float p=1;
// }

// message extractCourtLinesResponse{
//   repeated arr point=1;  
// }

message extractCourtLinesResponse{
  bytes point=1;
}